style: white header, fix About background img width/alignment

--- a/themes/inhabitent/sass/base/_reset.scss
+++ b/themes/inhabitent/sass/base/_reset.scss
@@ -50,3 +50,9 @@ table {
 body {
 	max-width: 1120px;
 }
+
+// custom resets
+
+* {
+	box-sizing: border-box; 
+	}
