--- a/themes/inhabitent/sass/layout/_grid.scss
+++ b/themes/inhabitent/sass/layout/_grid.scss
@@ -2,4 +2,6 @@ body {
     max-width: 1120px;
     margin: 0 auto;
     line-height: 1.75;
+    position: relative;
 }
+
