--- a/themes/inhabitent/sass/pages/_about.scss
+++ b/themes/inhabitent/sass/pages/_about.scss
@@ -1,3 +1,7 @@
+.header-green {
+    display: none;
+}
+
 .narrow-content-wrapper {
     max-width: 700px;
     margin: 0 auto 45px auto;
@@ -24,7 +28,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     width: 100vw;
-    max-width: 1120px;
+    // max-width: 1120px;
     height: 747px;
     margin-left: calc(-50vw + 50%);
     margin-bottom: 30px;
